# ducklake-demo

./: .env.example  .gitignore  README.md  generate_data.py  load_raw.py  pyproject.toml  run.py  set-env.sh  setup.py
ducklake_dbt/: dbt_project.yml  profiles.yml
ducklake_dbt/macros/: ducklake_table.sql
ducklake_dbt/models/marts/: dim_users.sql  fct_daily_active_users.sql  fct_revenue.sql
ducklake_dbt/models/staging/: _sources.yml  stg_events.sql  stg_invoices.sql  stg_tickets.sql  stg_users.sql
